--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
      <a
        target="_blank" 
-       href="http://instagram.com/moveisparavoce">
+       href="http://instagram.com/pedro_2dev">
        Instagram
     </a>
     
